--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
     tty: true
     depends_on:
       - backend
-  backend:
-    build: ./backend
+  catalogue:
+    build: ./catalogue
     depends_on:
       - postgres
     environment:
@@ -25,7 +25,7 @@ services:
       - FLASK_APP=allocation/entrypoints/flask_app.py
       - FLASK_DEBUG=1
     volumes:
-      - ./backend/src:/src
+      - ./catalogue/src:/src
     entrypoint: 
       - flask
       - run
