--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "frontend"]
 	path = frontend
 	url = https://github.com/yogoh31/Shop-Frontend
+[submodule "apis_gateway"]
+	path = apis_gateway
+	url = ./Shop-ApiGateway
